--- a/src/scss/_pricing.scss
+++ b/src/scss/_pricing.scss
@@ -1,5 +1,10 @@
 .Pricing {
     background-color: $white;
-
     height: 350px;
+    text-align: center;
+}
+
+.Pricing__range {
+    margin-right: auto;
+    margin-left: auto;
 }
